[gd_scene load_steps=9 format=3 uid="uid://g5eqn7itu60x"]

[ext_resource type="Script" path="res://PlayQuiz/QuizScreen.gd" id="1_dggsf"]
[ext_resource type="LabelSettings" uid="uid://d6gohf1yj5gp" path="res://Fonts/title.tres" id="1_ucxpf"]
[ext_resource type="LabelSettings" uid="uid://j4am0nttevp" path="res://Fonts/normal_text.tres" id="2_4kfko"]
[ext_resource type="Script" path="res://PlayQuiz/QuizContainer.gd" id="3_13wd8"]
[ext_resource type="StyleBox" uid="uid://lr75ncsg3vbm" path="res://Fonts/button_style.tres" id="3_ls1pd"]
[ext_resource type="Theme" uid="uid://bvd8u171meh78" path="res://Fonts/menu_button.tres" id="4_bbf0n"]
[ext_resource type="PackedScene" uid="uid://bg4n6jwlesj1o" path="res://PlayQuiz/AnswerContainer.tscn" id="5_vtxih"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4k6ch"]
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.629674, 0.629675, 0.629675, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
corner_detail = 10

[node name="QuizScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dggsf")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -928.0
offset_top = 16.0
offset_right = -74.0
offset_bottom = 148.0
grow_horizontal = 2
scale = Vector2(0.998198, 0.996771)
text = "Good ducking luck"
label_settings = ExtResource("1_ucxpf")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 200.0
offset_right = 1888.0
offset_bottom = 900.0
horizontal_scroll_mode = 0

[node name="QuizContainer" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/separation = 16
script = ExtResource("3_13wd8")

[node name="QuestionLabel" type="Label" parent="ScrollContainer/QuizContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "In law, settlement refers to:"
label_settings = ExtResource("2_4kfko")

[node name="AnswerContainer" parent="ScrollContainer/QuizContainer" instance=ExtResource("5_vtxih")]
layout_mode = 2

[node name="AnswerContainer2" parent="ScrollContainer/QuizContainer" instance=ExtResource("5_vtxih")]
layout_mode = 2
answerIndex = 1

[node name="AnswerContainer3" parent="ScrollContainer/QuizContainer" instance=ExtResource("5_vtxih")]
layout_mode = 2
answerIndex = 2

[node name="AnswerContainer4" parent="ScrollContainer/QuizContainer" instance=ExtResource("5_vtxih")]
layout_mode = 2
answerIndex = 3

[node name="CheckButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -547.5
offset_top = -130.0
offset_right = -172.5
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.03825, 0.970866)
size_flags_horizontal = 4
theme = ExtResource("4_bbf0n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_4k6ch")
theme_override_styles/hover = ExtResource("3_ls1pd")
theme_override_styles/pressed = ExtResource("3_ls1pd")
text = "Check answers
"

[node name="NextQuestionButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 140.0
offset_top = -130.0
offset_right = 497.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.03825, 0.970866)
size_flags_horizontal = 4
theme = ExtResource("4_bbf0n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_4k6ch")
theme_override_styles/hover = ExtResource("3_ls1pd")
theme_override_styles/pressed = ExtResource("3_ls1pd")
text = "Next question"

[node name="MenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -221.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = 133.0
grow_horizontal = 0
scale = Vector2(1.03825, 0.970866)
size_flags_horizontal = 4
theme = ExtResource("4_bbf0n")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_4k6ch")
theme_override_styles/hover = ExtResource("3_ls1pd")
theme_override_styles/pressed = ExtResource("3_ls1pd")
text = "Menu"

[connection signal="pressed" from="CheckButton" to="ScrollContainer/QuizContainer" method="onCheckButtonPressed"]
[connection signal="pressed" from="NextQuestionButton" to="." method="startNextQuiz"]
[connection signal="pressed" from="MenuButton" to="." method="OnMenuButtonPressed"]
